# miracz7

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf  west.yml
boards/: mini_stm32h743.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/motor_driver/: CMakeLists.txt  Kconfig
drivers/motor_driver/tb6612/: CMakeLists.txt  Kconfig.tb6612  tb6612.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/encoder/: CMakeLists.txt  Kconfig  encoder_stm32.c
drivers/zephyr/dts/bindings/motor_driver/: toshiba,tb6612fng.yaml
drivers/zephyr/dts/bindings/sensor/: st,stm32-encoder.yaml
include/zephyr/drivers/: motor.h
include/zephyr/drivers/sensor/: encoder_stm32.h
modules/libmicroxrcedds/: CMakeLists.txt  Kconfig
modules/libmicroxrcedds/microxrce_transports/serial_usb/: microxrce_transports.c  microxrce_transports.h
src/: main.c  microxrce_transports.c
